# forger

./: .gitignore  .kilocodemodes  ADAPTIVE_MODEL_TIERING.md  AGENTS.md  ANALYSIS_REPORT.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  FINAL_REPORT.md  IMPLEMENTATION_NOTES.md  IMPROVEMENTS_TRACKER.md  LICENSE  META_ANALYZER_DESIGN.md  MVP_READY.md  MVP_SHIPPING_REPORT.md  PACKAGING_OPTIONS.md  README.md  SESSION_SUMMARY.md  SHIPPING_CHECKLIST.md  forger_cli.py  pyproject.toml
.kilocode/workflows/: forger-execute.md  forger-plan.md
forger_code/: __init__.py
forger_code/data/: custom_modes.yaml
forger_code/data/prompts/: AUDITOR.md  DEBUGGER.md  DEV.md  ORCHESTRATOR.md  PLANNER_ARCHITECT.md  PM.md  QA.md
templates/: TASK_PACKET_TEMPLATE.md
